# cinema

./: .gitignore
backend/core/cinema_helpers/: .pypirc  Makefile  pyproject.toml
backend/core/cinema_helpers/cinema_helpers/api/: health.py
backend/gateway/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/gateway/app/: main.py
backend/gateway/cinema_api_gateway/: __init__.py  main.py
infra/nexus/: docker-compose.yml
