[project]
name = "gateway"
version = "0.0.1"
description = "Cinema API Gateway"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Katerina"}
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "^0.128.0"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
