[tool.poetry]
name = "cinema-helpers"
version = "0.0.0"
description = "Core helpers for Cinema services"
packages = [{ include = "cinema_helpers" }]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
tag-branch = "remotes/origin/main"

[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.group.dev.dependencies]
build = ">=1.2.0,<2.0.0"
twine = ">=6.2.0,<7.0.0"
